Bug 2030701 - Fix footer-button border visibility in High Contrast Mode r=desktop-theme-reviewers,dao
Differential Revision: https://phabricator.services.mozilla.com/D294994

--- a/toolkit/themes/shared/global-shared.css
+++ b/toolkit/themes/shared/global-shared.css
@@ -289,7 +289,7 @@ button.text-link .button-text {
 
 .footer-button {
   appearance: none;
-  border: 0;
+  border: var(--button-border);
   border-radius: var(--button-border-radius);
   color: var(--button-text-color);
   background-color: var(--button-background-color);
@@ -320,24 +320,29 @@ button.text-link .button-text {
     &:hover {
       color: var(--button-text-color-hover);
       background-color: var(--button-background-color-hover);
+      border-color: var(--button-border-color-hover);
     }
     &:hover:active,
     &[open] {
       color: var(--button-text-color-active);
       background-color: var(--button-background-color-active);
+      border-color: var(--button-border-color-active);
     }
     &[default],
     &.primary {
       color: var(--button-text-color-primary);
       background-color: var(--button-background-color-primary);
+      border-color: var(--button-border-color-primary);
       &:hover {
         color: var(--button-text-color-primary-hover);
         background-color: var(--button-background-color-primary-hover);
+        border-color: var(--button-border-color-primary-hover);
       }
       &:hover:active,
       &[open] {
         color: var(--button-text-color-primary-active);
         background-color: var(--button-background-color-primary-active);
+        border-color: var(--button-border-color-primary-active);
       }
     }
   }
